--- a/app/src/main/res/values/mozonline_strings.xml
+++ b/app/src/main/res/values/mozonline_strings.xml
@@ -22,7 +22,7 @@
 
     <!-- Topsites-->
     <!-- Default title for pinned Baidu top site that links to Baidu home page  -->
-    <string name="default_top_site_baidu">Baidu</string>
+    <string name="default_top_site_baidu">百度</string>
     <!-- Default title for pinned JD top site that links to JD home page  -->
     <string name="default_top_site_jd">JD</string>
     <!-- Default title for pinned JD top site that links to PDD home page  -->
